--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^5.12.8",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "passport-strava": "^0.2.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
